--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script 
             type="text/javascript"
-            src="{{ url_for('static', filename='js/myscript.js') }}"></script>
+            src="{{ url_for('static', filename='js/showDataframe.js') }}"></script>
 
         {% block head %}{% endblock %}
     </head>
