--- a/templates/index.html
+++ b/templates/index.html
@@ -44,14 +44,30 @@
                         {{type_values | safe}}
                     </div>
                 </div>
-    
-                <div class="text-center" style="padding-bottom: 30px; padding-top: 30px;">
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <form action="/" method="POST">
-                            <input type="submit" value="Normalize">
-                        </form>
-                    </div>
-                </div> 
+
+                {% if normalized %}
+                    <div class="text-center" style="padding-bottom: 30px; padding-top: 30px;">
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <form action="/" method="GET">
+                                <input type="submit" value="Back to raw data">
+                            </form>
+                            <form style="padding-left: 10px; padding-right: 10px;">
+                                <input type="button" id="next" value="Show Boxplots and Histograms">
+                            </form>
+                            <form action="/knn" method="GET">
+                                <input type="submit" value="Run KNN">
+                            </form>
+                        </div>
+                    </div> 
+                {% else %}
+                    <div class="text-center" style="padding-bottom: 30px; padding-top: 30px;">
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <form action="/" method="POST">
+                                <input type="submit" value="Normalize">
+                            </form>
+                        </div>
+                    </div> 
+                {% endif %}
 
             </div>
         
